Provisioning/apps/3-basic-app.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basic-app-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: basic-app-deployment
    spec:
      containers:
        - name: empty-core-app
          image: 'docker.io/selcukusta/empty-flask-app:1.0.0'
          ports:
            - containerPort: 1905
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: basic-app-service
  labels:
    name: basic-app-service
spec:
  ports:
    - port: 1905
      protocol: TCP
  selector:
    app: basic-app-deployment
  type: NodePort
