Provisioning/apps/sample-app-with-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - nodePort: 31001
    protocol: TCP
    port: 80
    targetPort: 80
