Provisioning/apps/4-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /basic-app
        backend:
          serviceName: basic-app-service
          servicePort: 1905
